added boardType array to access and printed further data. added basic table to html to display content.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="wave1"></div>
+  <h1 id="waveTitle"></h1>
+  <h2 id="waveRange"></h2>
+  <table>
+    <tr>
+      <th>Wave Type: </th>
+      <td id="waveType"></td>
+    </tr>
+    <tr>
+      <th>Board Type: </th>
+      <td id="boardType"></td>
+    </tr>
+  </table>
   <script src="script.js"></script>
 </body>
 </html>
