added normalize.css and some basic styles to the page.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
 <head>
   <title>waves_js</title>
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1 id="waveTitle"></h1>
-  <h2 id="waveRange"></h2>
-  <table>
-    <tr>
-      <th>Wave Type: </th>
-      <td id="waveType"></td>
-    </tr>
-    <tr>
-      <th>Board Type: </th>
-      <td id="boardType"></td>
-    </tr>
-  </table>
+<body class='body-wrap'>
+  <div class="inner-wrap">
+    <h1 id="waveTitle"></h1>
+    <h2 id="waveRange"></h2>
+    <table>
+      <tr>
+        <th>Wave Type: </th>
+        <td id="waveType"></td>
+      </tr>
+      <tr>
+        <th>Board Type: </th>
+        <td id="boardType"></td>
+      </tr>
+    </table>
+  </div><!-- end inner wrap -->
   <script src="script.js"></script>
 </body>
 </html>
