creating a dynamic site that pulls content dynamically using ajax and json to load content. added base file structure and index.html format.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
-<!Doctype html>
+<!doctype html>
 <html>
-<head>
-  <title>waves_js</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body class='body-wrap'>
-  <div class="inner-wrap">
-    <h1 id="waveTitle"></h1>
-    <h2 id="waveRange"></h2>
-    <table>
-      <tr>
-        <th>Wave Type: </th>
-        <td id="waveType"></td>
-      </tr>
-      <tr>
-        <th>Board Type: </th>
-        <td id="boardType"></td>
-      </tr>
-    </table>
-  </div><!-- end inner wrap -->
-  <script src="script.js"></script>
-</body>
+  <head>
+    <title>California Waves</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <h1>California Waves</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href='steamers/wave.html'>Steamer Lane</a></li>
+          <li><a href='rincon/wave.html'>Rincon</a></li>
+          <li><a href='trestles/wave.html'>Trestles</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id='body-wrap'>
+      <section id='content'>
+        <!-- banner image figure element -->
+        <!-- current wave conditions -->
+        <!-- weather conditions -->
+        <!-- best conditions -->
+      </section>
+    </div>
+    <footer>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
