added html structure, as well as ajax call to pull in dynamic content from three separate waves.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
       </div>
       <nav>
         <ul>
-          <li><a href='steamers/wave.html'>Steamer Lane</a></li>
-          <li><a href='rincon/wave.html'>Rincon</a></li>
-          <li><a href='trestles/wave.html'>Trestles</a></li>
+          <li><a href='waves/steamers/index.html'>Steamer Lane</a></li>
+          <li><a href='waves/rincon/index.html'>Rincon</a></li>
+          <li><a href='waves/trestles/index.html'>Trestles</a></li>
+          <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
     </header>
-    <div id='body-wrap'>
+    <div id='bodyWrap'>
       <section id='content'>
+        <h1>Today's Best Bet</h1>
         <!-- banner image figure element -->
         <!-- current wave conditions -->
         <!-- weather conditions -->
@@ -32,5 +34,7 @@
         </ul>
       </nav>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src='js/script.js'></script>
   </body>
 </html>
