linked up normalize and cleaned up page navigation call in script.js file.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>California Waves</title>
+    <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
     <header>
