changing file organization

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href='waves/steamers/index.html'>Steamer Lane</a></li>
-          <li><a href='waves/rincon/index.html'>Rincon</a></li>
-          <li><a href='waves/trestles/index.html'>Trestles</a></li>
+          <li><a href='waves/steamers.html'>Steamer Lane</a></li>
+          <li><a href='waves/rincon.html'>Rincon</a></li>
+          <li><a href='waves/trestles.html'>Trestles</a></li>
           <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
