Added waves.html file which is the view for all waves, which use the same template. Updated links and contents in index.html

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
         <h1>California Waves</h1>
       </div>
       <nav>
+        <div id='mobileNav'><a><span>>><<</span></a></div>
         <ul>
-          <li><a href='waves/steamers.html'>Steamer Lane</a></li>
-          <li><a href='waves/rincon.html'>Rincon</a></li>
-          <li><a href='waves/trestles.html'>Trestles</a></li>
+          <li><a href='waves.html' id='steamers'>Steamer Lane</a></li>
+          <li><a href='waves.html' id='rincon'>Rincon</a></li>
+          <li><a href='waves.html' id='trestles'>Trestles</a></li>
           <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
     </header>
     <div id='bodyWrap'>
       <section id='content'>
-        <h1>Today's Best Bet</h1>
+        <h1>Today's Best Shot</h1>
         <!-- banner image figure element -->
         <!-- current wave conditions -->
         <!-- weather conditions -->
