--- a/waves.html
+++ b/waves.html
@@ -5,7 +5,7 @@
         <ul>
           <li><a href='waves/weather.html'>Weather</a></li>
           <li><a href='waves/waves.html'>Waves</a></li>
-          <li><a href='waves/best-conditions.html'>Best When</a></li>
+          <li><a href='waves/best-conditions.html' class='active'>Best When</a></li>
         </ul>
       </nav>
     </div>
