Getting the file structure sorted out and how to best make ajax calls. A work in progress.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
       <nav>
         <div id='mobileNav'><a><span>>><<</span></a></div>
         <ul>
-          <li><a href='waves.html' id='steamers'>Steamer Lane</a></li>
-          <li><a href='waves.html' id='rincon'>Rincon</a></li>
-          <li><a href='waves.html' id='trestles'>Trestles</a></li>
+          <li><a href='waves/best-conditions.html' id='steamers'>Steamer Lane</a></li>
+          <li><a href='waves/best-conditions.html' id='rincon'>Rincon</a></li>
+          <li><a href='waves/best-conditions.html' id='trestles'>Trestles</a></li>
           <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
     </header>
+    <img src='#'>
     <div id='bodyWrap'>
       <section id='content'>
         <h1>Today's Best Shot</h1>
