--- a/waves.html
+++ b/waves.html
@@ -1,7 +1,7 @@
 <div id='bodyWrap'>
   <section id='content'>
-    <div id='subNav'>
-      <nav>
+    <div>
+      <nav  id='subNav'>
         <ul>
           <li><a href='waves/weather.html'>Weather</a></li>
           <li><a href='waves/waves.html'>Waves</a></li>
@@ -12,7 +12,7 @@
     <h1>Waves View</h1>
     <div id='statsWrap'>
       <section id='statsSection'>
-        <!-- best conditions -->
+        <h1>Best Conditions</h1>
       </section>
     </div>
   </section>
