--- a/waves/best-conditions.html
+++ b/waves/best-conditions.html
@@ -1,5 +1,19 @@
-<div id='statsWrap'>
-  <section id='statsSection'>
-    <!-- best conditions -->
+<div id='bodyWrap'>
+  <section id='content'>
+    <div>
+      <nav  id='subNav'>
+        <ul>
+          <li><a href='waves/weather.html'>Weather</a></li>
+          <li><a href='waves/waves.html'>Waves</a></li>
+          <li><a href='waves/best-conditions.html' class='active'>Best When</a></li>
+        </ul>
+      </nav>
+    </div>
+    <h1>Waves View</h1>
+    <div id='statsWrap'>
+      <section id='statsSection'>
+        <h1>Best Conditions</h1>
+      </section>
+    </div>
   </section>
 </div>
