changed call around, right nowweather call is happening on load, but needs to be triggered when pageNav function is called. tomorrow.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>California Waves</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -12,16 +13,16 @@
       <nav>
         <div id='mobileNav'><a><span>>><<</span></a></div>
         <ul>
-          <li><a href='waves/best-conditions.html' id='steamers'>Steamer Lane</a></li>
-          <li><a href='waves/best-conditions.html' id='rincon'>Rincon</a></li>
-          <li><a href='waves/best-conditions.html' id='trestles'>Trestles</a></li>
+          <li><a href='best-conditions.html' id='steamers'>Steamer Lane</a></li>
+          <li><a href='best-conditions.html' id='rincon'>Rincon</a></li>
+          <li><a href='best-conditions.html' id='trestles'>Trestles</a></li>
           <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
     </header>
     <img src='#'>
     <div id='bodyWrap'>
-      <section id='content'>
+      <section class='content'>
         <h1>Today's Best Shot</h1>
         <!-- banner image figure element -->
         <!-- current wave conditions -->
