Got the .load function calls sorted out. included script tag references in best-condition.html, which was called from index.html. it's all working as expected now. next step -- sorting out content placement of weather data calls.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div>
         <h1>California Waves</h1>
       </div>
-      <nav>
+      <nav id='nav'>
         <div id='mobileNav'><a><span>>><<</span></a></div>
         <ul>
           <li><a href='best-conditions.html' id='steamers'>Steamer Lane</a></li>
@@ -22,13 +22,6 @@
     </header>
     <img src='#'>
     <div id='bodyWrap'>
-      <section class='content'>
-        <h1>Today's Best Shot</h1>
-        <!-- banner image figure element -->
-        <!-- current wave conditions -->
-        <!-- weather conditions -->
-        <!-- best conditions -->
-      </section>
     </div>
     <footer>
       <nav>
