--- a/best-conditions.html
+++ b/best-conditions.html
@@ -1,16 +1,16 @@
 <div id='bodyWrap'>
   <section class='content'>
-    <div>
+    <div id='subNav'>
         <ul>
           <li><a href='weather.html' class='active'>Weather</a></li>
           <li><a href='waves.html' class='subNav'>Waves</a></li>
-          <li><a href='best-conditions.html'>Best When</a></li>
+          <li><a href='best-bet.html' >Best When</a></li>
         </ul>
     </div>
     <h1>Waves View</h1>
     <div id='statsWrap'>
-      <section id='content'>
-      </section>
     </div>
   </section>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src='js/script.js'></script>
