--- a/best-conditions.html
+++ b/best-conditions.html
@@ -1,16 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8' />
+  <title>Best Conditions</title>
+  <link rel='stylesheet' href='css/normalize.css' />
+  <link rel='stylesheet' href='css/style.css' />
+</head>
+<body>
 <div id='bodyWrap'>
   <section class='content'>
     <div id='subNav'>
         <ul>
           <li><a href='weather.html' class='active'>Weather</a></li>
           <li><a href='waves.html' class='subNav'>Waves</a></li>
-          <li><a href='best-bet.html' >Best When</a></li>
+          <li><a href='best-conditions.html'>Best When</a></li>
         </ul>
     </div>
     <h1>Waves View</h1>
     <div id='statsWrap'>
+      <h1>Best Bet</h1>
     </div>
   </section>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src='js/script.js'></script>
+</body>
+</html>
