--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset='utf-8'>
     <title>California Waves</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +21,7 @@
         </ul>
       </nav>
     </header>
-    <img src='#'>
+    <img src='image1.jpg' alt='steamer lane'>
     <div id='bodyWrap'>
     </div>
     <footer>
@@ -31,7 +32,7 @@
         </ul>
       </nav>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/script.js'></script>
   </body>
 </html>
