--- a/best-conditions.html
+++ b/best-conditions.html
@@ -12,7 +12,7 @@
     <div id='subNav'>
         <ul>
           <li><a href='weather.html' class='active'>Weather</a></li>
-          <li><a href='waves.html' class='subNav'>Waves</a></li>
+          <li><a href='waves.html'>Waves</a></li>
           <li><a href='best-conditions.html'>Best When</a></li>
         </ul>
     </div>
