Reorganizing file structure.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <nav id='nav'>
         <div id='mobileNav'><a><span>>><<</span></a></div>
         <ul>
-          <li><a href='best-conditions.html' id='steamers'>Steamer Lane</a></li>
-          <li><a href='best-conditions.html' id='rincon'>Rincon</a></li>
-          <li><a href='best-conditions.html' id='trestles'>Trestles</a></li>
+          <li><a href='assets/best-conditions.html' id='steamers'>Steamer Lane</a></li>
+          <li><a href='assets/best-conditions.html' id='rincon'>Rincon</a></li>
+          <li><a href='assets/best-conditions.html' id='trestles'>Trestles</a></li>
           <li><a href='index.html' class='active'>Best Bet</a></li>
         </ul>
       </nav>
     </header>
-    <img src='image1.jpg' alt='steamer lane'>
+    <img src='images/image1.jpg' alt='steamer lane'>
     <div id='bodyWrap'>
     </div>
     <footer>
