--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -1,9 +1,9 @@
   <section class='content'>
     <div id='subNav'>
         <ul>
-          <li><a href='weather.html' class='active'>Weather</a></li>
-          <li><a href='waves.html'>Waves</a></li>
-          <li><a href='best-conditions.html'>Best When</a></li>
+          <li><a href='assets/weather.html' class='active'>Weather</a></li>
+          <li><a href='assets/waves.html'>Waves</a></li>
+          <li><a href='assets/best-conditions.html'>Best When</a></li>
         </ul>
     </div>
     <h1>Waves View</h1>
