Added mobile navigation into page. This interaction sets page default navigation as hidden, and displayed when nav button is clicked. When user clicks on one of the nav links, the navigation ul's default behavior is to return to a hidden state. This feature will be disabled in desktop view.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1>California Waves</h1>
       </div>
       <nav id='nav'>
-        <div id='mobileNav'><a><span>>><<</span></a></div>
+        <div id='mobileNav'>
+          <a href='mobile.html'>Mobile Nav</a>
+        </div>
         <ul>
           <li><a href='assets/best-conditions.html' id='steamers'>Steamer Lane</a></li>
           <li><a href='assets/best-conditions.html' id='rincon'>Rincon</a></li>
