Added copywrite function.

--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <div>
-        <h1>California Waves</h1>
-      </div>
-      <nav id='nav'>
-        <div id='mobileNav'>
-          <a href='mobile.html'>Mobile Nav</a>
+    <div id='pageWrap'>
+      <header>
+        <div>
+          <h1>California Waves</h1>
         </div>
-        <ul>
-          <li><a href='assets/best-conditions.html' id='steamers'>Steamer Lane</a></li>
-          <li><a href='assets/best-conditions.html' id='rincon'>Rincon</a></li>
-          <li><a href='assets/best-conditions.html' id='trestles'>Trestles</a></li>
-          <li><a href='index.html' class='active'>Best Bet</a></li>
-        </ul>
-      </nav>
-    </header>
-    <img src='images/image1.jpg' alt='steamer lane'>
-    <div id='bodyWrap'>
-    </div>
-    <footer>
-      <nav>
-        <ul>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
-    </footer>
+        <nav id='nav'>
+          <div id='mobileNav'>
+            <a href='mobile.html'>Mobile Nav</a>
+          </div>
+          <ul>
+            <li><a href='assets/best-conditions.html' id='steamers'>Steamer Lane</a></li>
+            <li><a href='assets/best-conditions.html' id='rincon'>Rincon</a></li>
+            <li><a href='assets/best-conditions.html' id='trestles'>Trestles</a></li>
+            <li><a href='index.html' class='active'>Best Bet</a></li>
+          </ul>
+        </nav>
+      </header>
+      <img src='images/image1.jpg' alt='steamer lane'>
+      <div id='bodyWrap'>
+      </div>
+      <footer>
+        <p></p>
+        <nav>
+          <ul>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </footer>
+    </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/script.js'></script>
   </body>
