--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </footer>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src='js/retina.js'></script>
     <script src='js/script.js'></script>
   </body>
 </html>
