--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -6,7 +6,7 @@
           <li><a href='assets/best-conditions.html' id='bestConditionsLink'>Best When</a></li>
         </ul>
     </div>
-    <h1>Waves View</h1>
+    <h1 id='locationHeader'></h1>
     <div id='statsWrap'>
       <h1>Best Bet</h1>
     </div>
