--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a href='mobile.html'>Mobile Nav</a>
           </div>
           <ul>
-            <li><a href='assets/best-conditions.html' id='steamers'>Steamer Lane</a></li>
-            <li><a href='assets/best-conditions.html' id='rincon'>Rincon</a></li>
-            <li><a href='assets/best-conditions.html' id='trestles'>Trestles</a></li>
+            <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
+            <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
+            <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
             <li><a href='index.html' class='active'>Best Bet</a></li>
           </ul>
         </nav>
