Added image background style and changed element on page from an image to a figure tag, placing the image using css.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </ul>
         </nav>
       </header>
-      <img src='images/image1.jpg' alt='steamer lane'>
+      <figure id='heroImg'></figure>
       <div id='bodyWrap'>
       </div>
       <footer>
