--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body id='bestBetPage'>
     <div id='pageWrap'>
       <header>
         <div>
@@ -20,7 +20,7 @@
             <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
             <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
             <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-            <li><a href='index.html' class='active'>Best Bet</a></li>
+            <li><a href='index.html' id='best-bet' class='active'>Best Bet</a></li>
           </ul>
         </nav>
       </header>
