Title now propagating in location header when user clicks on nav link.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
             <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
             <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-            <li><a href='index.html' id='best-bet' class='active'>Best Bet</a></li>
+            <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
           </ul>
         </nav>
       </header>
