--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body id='bestBetPage'>
+    <figure id='heroImg'>
     <div id='pageWrap'>
       <header>
         <div>
@@ -24,11 +25,9 @@
           </ul>
         </nav>
       </header>
-      <figure id='heroImg'></figure>
       <div id='bodyWrap'>
       </div>
       <footer>
-        <p></p>
         <nav>
           <ul>
             <li>About</li>
@@ -36,6 +35,7 @@
           </ul>
         </nav>
       </footer>
+    </figure>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/script.js'></script>
