Added about and contact pages, although mostly as a placeholder. Added function to call the different pages into the bodywrap container when called using .load().

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <footer>
         <nav>
           <ul>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href='assets/about.html' id='about'>About</a></li>
+            <li><a href='assets/contact.html' id='contact'>Contact</li>
           </ul>
         </nav>
       </footer>
