--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav>
           <ul>
             <li><a href='assets/about.html' id='about'>About</a></li>
-            <li><a href='assets/contact.html' id='contact'>Contact</li>
+            <li><a href='assets/contact.html' id='contact'>Contact</a></li>
           </ul>
         </nav>
       </footer>
