--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </nav>
       </header>
       <div id='bodyWrap'>
+        <h1>Waves Today</h1>
       </div>
       <footer>
         <nav>
