Cleaning up jsonData function call.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>California Waves</title>
+    <title>Today's Waves</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -11,7 +11,7 @@
     <div id='pageWrap'>
       <header>
         <div>
-          <h1>California Waves</h1>
+          <h1>Today's Waves</h1>
         </div>
         <nav id='nav'>
           <div id='mobileNav'>
