--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -1,9 +1,9 @@
   <section class='content'>
     <div id='subNav'>
         <ul>
-          <li><a href='assets/weather.html' id='weatherLink' class='active'>Weather</a></li>
+          <li><a href='assets/weather.html' id='weatherLink'>Weather</a></li>
           <li><a href='assets/waves.html'id='wavesLink'>Waves</a></li>
-          <li><a href='assets/best-conditions.html' id='bestConditionsLink'>Best When</a></li>
+          <li><a href='assets/best-conditions.html' id='bestConditionsLink' class='active'>Best When</a></li>
         </ul>
     </div>
     <h1 id='locationHeader'></h1>
