Added wrappers and buttons to the html doc to and added an accordion function to handle the application in mobile and tablet views. As the design is mobile first the media queries haven't been added yet.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
           </ul>
         </nav>
       </header>
-      <div id='bodyWrap'>
-        <h1>Waves Today</h1>
-      </div>
+      <div class='accordion'>
+        <a href='#' class='accordion-control'>Today's Report</a>
+        <div id='bodyWrap' class='accordion-panel'>
+          <h1>Waves Today</h1>
+        </div><br/>
+        <a href='#' class='accordion-control'>Gallery</a>
+        <div id='gallery' class='accordion-panel'>
+        </div>
+      </div><!-- end accordion -->
       <footer>
         <nav>
           <ul>
