Added some base styles. Geared towards a mobile first design, I'm building almost everything by relative units, with the exception of the height designations.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body id='bestBetPage'>
-    <figure id='heroImg'>
     <div id='pageWrap'>
       <header>
         <div>
@@ -29,7 +28,7 @@
         <a href='#' class='accordion-control'>Today's Report</a>
         <div id='bodyWrap' class='accordion-panel'>
           <h1>Waves Today</h1>
-        </div><br/>
+        </div>
         <a href='#' class='accordion-control'>Gallery</a>
         <div id='gallery' class='accordion-panel'>
         </div>
@@ -42,7 +41,6 @@
           </ul>
         </nav>
       </footer>
-    </figure>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/script.js'></script>
