Added styles to allow scrolling for the mobile nav.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
           <div id='mobileNav'>
             <a href='mobile.html'>Mobile Nav</a>
           </div>
-          <ul>
-            <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
-            <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
-            <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-            <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
-          </ul>
+          <div class='nav-wrap'>
+            <ul>
+              <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
+              <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
+              <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
+              <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
+            </ul>
+        </div>
         </nav>
       </header>
       <div class='accordion'>
