Removed accordion from page.

--- a/index.html
+++ b/index.html
@@ -17,24 +17,18 @@
             <a href='mobile.html'>Mobile Nav</a>
           </div>
           <div class='nav-wrap'>
-            <ul>
-              <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
-              <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
-              <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-              <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
-            </ul>
-        </div>
+          <ul>
+            <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
+            <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
+            <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
+            <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
+          </ul>
+        </div><!-- end nav-wrap -->
         </nav>
       </header>
-      <div class='accordion'>
-        <a href='#' class='accordion-control'>Today's Report</a>
         <div id='bodyWrap' class='accordion-panel'>
           <h1>Waves Today</h1>
         </div>
-        <a href='#' class='accordion-control'>Gallery</a>
-        <div id='gallery' class='accordion-panel'>
-        </div>
-      </div><!-- end accordion -->
       <footer>
         <nav>
           <ul>
