Assigned viewport scale in index.html, added additional styles to outline content areas. Added script to assign innerWidth as the width in a css class. I plan on removing this function.

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -1,20 +1,22 @@
-<form id='contactForm' name='contactForm' action='#' method='POST'>
-  <legend>Contact Us</legend>
-  <ul>
-    <li>
-      <label for='name'>Name: </label><br />
-      <input type='text' id='name' title='Enter your name' autofocus placeholder='Enter your name' pattern="[A-Za-z]" required />
-    </li>
-    <li>
-      <label for='email'>Email: </label><br />
-      <input type='text' id='email' title='Enter your email address' placeholder='Enter your email address' required />
-    </li>
-    <li>
-      <label for='comment'>Comment: </label><br />
-      <textarea id='comment'></textarea>
-    </li>
-    <li>
-      <input type='submit' id='submit' value='Send'>
-    </li>
-  </ul>
-</form>
+<div id='statsWrap'>
+  <form id='contactForm' name='contactForm' action='#' method='POST'>
+    <legend>Contact Us</legend>
+    <ul>
+      <li>
+        <label for='name'>Name: </label><br />
+        <input type='text' id='name' title='Enter your name' autofocus placeholder='Enter your name' pattern="[A-Za-z]" required />
+      </li>
+      <li>
+        <label for='email'>Email: </label><br />
+        <input type='text' id='email' title='Enter your email address' placeholder='Enter your email address' required />
+      </li>
+      <li>
+        <label for='comment'>Comment: </label><br />
+        <textarea id='comment'></textarea>
+      </li>
+      <li>
+        <input type='submit' id='submit' value='Send'>
+      </li>
+    </ul>
+  </form>
+</div>
