--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Today's Waves</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,10 +19,10 @@
           </div>
           <div class='nav-wrap'>
           <ul>
-            <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
-            <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
-            <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-            <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><li>Best Bet</li></a>
           </ul>
         </div><!-- end nav-wrap -->
         </nav>
