removed the innerwidth call.

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -8,7 +8,7 @@
       </li>
       <li>
         <label for='email'>Email: </label><br />
-        <input type='text' id='email' title='Enter your email address' placeholder='Enter your email address' required />
+        <input type='email' id='email' title='Enter your email address' placeholder='Enter your email address' required />
       </li>
       <li>
         <label for='comment'>Comment: </label><br />
