Changed figure tags to image tags while I get the image json call sorted out. Still not working just yet.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           </div>
           <div class='nav-wrap'>
           <ul>
-            <a href='assets/best-conditions.html' id='steamers' class='wave'><li>Steamer Lane</li></a>
-            <a href='assets/best-conditions.html' id='rincon' class='wave'><li>Rincon</li></a>
-            <a href='assets/best-conditions.html' id='trestles' class='wave'><li>Trestles</li></a>
-            <a href='assets/best-conditions.html' id='bestChance' class='active'><li>Best Bet</li></a>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><img class="thumb"></img><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><img class="thumb"></img><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><img class="thumb"></img><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><img class="thumb"></img><li>Best Bet</li></a>
           </ul>
         </div><!-- end nav-wrap -->
         </nav>
