Starting to get this branch up to date and adding img tags and thumbnail object for the navigation menu.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href='mobile.html'>Mobile Nav</a>
           </div>
           <ul>
-            <li><a href='assets/best-conditions.html' id='steamers' class='wave'>Steamer Lane</a></li>
-            <li><a href='assets/best-conditions.html' id='rincon' class='wave'>Rincon</a></li>
-            <li><a href='assets/best-conditions.html' id='trestles' class='wave'>Trestles</a></li>
-            <li><a href='assets/best-conditions.html' id='bestChance' class='active'>Best Bet</a></li>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><li>Best Bet</li></a>
           </ul>
         </nav>
       </header>
