Moving on to styles.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body id='bestBetPage'>
-    <figure id='heroImg'>
     <div id='pageWrap'>
       <header>
         <div>
@@ -18,10 +17,10 @@
             <a href='mobile.html'>Mobile Nav</a>
           </div>
           <ul>
-            <a href='assets/best-conditions.html' id='steamers' class='wave'><li>Steamer Lane</li></a>
-            <a href='assets/best-conditions.html' id='rincon' class='wave'><li>Rincon</li></a>
-            <a href='assets/best-conditions.html' id='trestles' class='wave'><li>Trestles</li></a>
-            <a href='assets/best-conditions.html' id='bestChance' class='active'><li>Best Bet</li></a>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><img class='thumbs'/><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><img class='thumbs'/><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><img class='thumbs'/><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><img class='thumbs'/><li>Best Bet</li></a>
           </ul>
         </nav>
       </header>
@@ -36,7 +35,6 @@
           </ul>
         </nav>
       </footer>
-    </figure>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='js/script.js'></script>
