Styles all updated and calls now matching pretty close to where it had been before master went awry.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <body id='bestBetPage'>
     <div id='pageWrap'>
       <header>
-        <div>
+        <div id='logo'>
           <h1>California Waves</h1>
         </div>
         <nav id='nav'>
           <div id='mobileNav'>
             <a href='mobile.html'>Mobile Nav</a>
           </div>
+          <div class='nav-wrap'>
           <ul>
-            <a href='assets/best-conditions.html' id='steamers' class='wave'><img class='thumbs'/><li>Steamer Lane</li></a>
-            <a href='assets/best-conditions.html' id='rincon' class='wave'><img class='thumbs'/><li>Rincon</li></a>
-            <a href='assets/best-conditions.html' id='trestles' class='wave'><img class='thumbs'/><li>Trestles</li></a>
-            <a href='assets/best-conditions.html' id='bestChance' class='active'><img class='thumbs'/><li>Best Bet</li></a>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><img class='thumb'/><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><img class='thumb'/><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><img class='thumb'/><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><img class='thumb'/><li>Best Bet</li></a>
           </ul>
+          </div>
         </nav>
       </header>
       <div id='bodyWrap'>
