Getting the nav thumbnails sorted out. I do want these to be figure tags and not images, so I've made that change in the index.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>California Waves</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -9,19 +10,19 @@
   <body id='bestBetPage'>
     <div id='pageWrap'>
       <header>
-        <div id='logo'>
-          <h1>California Waves</h1>
-        </div>
+        <!-- <div id='logo'> -->
+          <img src='images/icon.png' alt='California Waves' class="logo-icon">
+        <!-- </div> -->
         <nav id='nav'>
           <div id='mobileNav'>
             <a href='mobile.html'>Mobile Nav</a>
           </div>
           <div class='nav-wrap'>
           <ul>
-            <a href='assets/best-conditions.html' id='steamers' class='wave'><img class='thumb'/><li>Steamer Lane</li></a>
-            <a href='assets/best-conditions.html' id='rincon' class='wave'><img class='thumb'/><li>Rincon</li></a>
-            <a href='assets/best-conditions.html' id='trestles' class='wave'><img class='thumb'/><li>Trestles</li></a>
-            <a href='assets/best-conditions.html' id='bestChance' class='active'><img class='thumb'/><li>Best Bet</li></a>
+            <a href='assets/best-conditions.html' id='steamers' class='wave'><figure class='thumb'></figure><li>Steamer Lane</li></a>
+            <a href='assets/best-conditions.html' id='rincon' class='wave'><figure class='thumb'></figure><li>Rincon</li></a>
+            <a href='assets/best-conditions.html' id='trestles' class='wave'><figure class='thumb'></figure><li>Trestles</li></a>
+            <a href='assets/best-conditions.html' id='bestChance' class='active'><figure class='thumb'></figure><li>Best Bet</li></a>
           </ul>
           </div>
         </nav>
