Updated styles in the subnav area, just really carving out the sizing and interactions on the links.

--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -1,7 +1,7 @@
 <section class='content'>
   <div id='subNav'>
       <ul>
-        <li><a href='assets/best-conditions.html' id='bestConditionsLink' class='active'>Best When</a></li>
+        <li><a href='assets/best-conditions.html' id='bestConditionsLink' class='active'>Overview</a></li>
         <li><a href='assets/weather.html' id='weatherLink'>Weather</a></li>
         <li><a href='assets/waves.html'id='wavesLink'>Waves</a></li>
       </ul>
