Added a gallery toggle button and gallery section. Using an overflow for the gallery currently, when it's not almost 1am I'll build the image to reflect the body width property, relying on window width to determine image size.

--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -10,4 +10,12 @@
   <div id='statsWrap'>
   </div>
 </section>
+<a href='#' id='galleryBtn'>Gallery</a>
+<div id='galleryWrap'>
+  <section id='gallery'>
+    <img src='' alt=''>
+    <img src='' alt=''>
+    <img src='' alt=''>
+  </section>
+</div>
 <script src='js/internal.js'></script>
