Changed icon to svg graphic, set up the location header and subnav. This new style will incorporate the backgrounds already ready to be placed in. Next commit for that.

--- a/assets/best-conditions.html
+++ b/assets/best-conditions.html
@@ -2,7 +2,7 @@
   <h1 id='locationHeader'></h1>
   <div id='subNav'>
       <ul>
-        <li><a href='assets/best-conditions.html' id='bestConditionsLink' class='active'>Overview</a></li>
+        <li class='active'><a href='assets/best-conditions.html' id='bestConditionsLink'>Overview</a></li>
         <li><a href='assets/weather.html' id='weatherLink'>Weather</a></li>
         <li><a href='assets/waves.html'id='wavesLink'>Waves</a></li>
       </ul>
