--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id='pageWrap'>
       <header>
         <!-- <div id='logo'> -->
-          <img src='images/icon.png' alt='California Waves' class="logo-icon">
+          <img src='images/icon.svg' alt='California Waves' class="logo-icon">
         <!-- </div> -->
         <nav id='nav'>
           <div id='mobileNav'>
