--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- </div> -->
         <nav id='nav'>
           <div id='mobileNav'>
-            <a href='mobile.html'></a>
+            <a href='mobile.html'><span></span></a>
           </div>
           <div class='nav-wrap'>
           <ul>
