--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
     <div id='content'>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='js/json.js'></script>
+    <script src='js/test.js'></script>
   </body>
 </html>
