Added more styles to.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div id='pageWrap'>
       <header>
         <!-- <div id='logo'> -->
+          <a href='/index.html' class='home'>
           <img src='images/icon.svg' alt='California Waves' class="logo-icon">
+          </a>
         <!-- </div> -->
         <nav id='nav'>
           <div id='mobileNav'>
