--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
     <title>Json test</title>
   </head>
   <body>
+    <div style='height:50px;width:50px;background:#333;cursor:pointer'></div>
     <div id='content'>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
