--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/flex.css"/>
   </head>
-  <body>
+  <body id="santaCruz">
     <div id="pageWrap">
       <header id="header">
         <nav id="mainNav">
@@ -39,6 +39,7 @@
       </footer>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='js/built.js'></script>
+    <script src='js/event.js'></script>
+    <script src='js/script2.js'></script>
   </body>
 </html>
