--- a/index2.html
+++ b/index2.html
@@ -25,13 +25,13 @@
           <figure class="backgd"></figure>
           <div id="conditionsInfo">
             <ul>
-              
+
             </ul>
           </div>
         </section><!-- end conditions info section -->
       </section><!-- end content section -->
       <footer>
-        <p><small>By bwynn<small></p>
+        <p><small>By bwynn</small></p>
       </footer>
     </div><!-- end pageWrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
