Added a trigger event to begin switching over the json data

--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,7 @@
           </div>
         </section><!-- end conditions info section -->
       </section><!-- end content section -->
+      <button>Rincon</button>
       <footer>
         <p><small>By bwynn</small></p>
       </footer>
